--- a/public/scss/layout.scss
+++ b/public/scss/layout.scss
@@ -1,8 +1,8 @@
-article {
-  height: 30rem;
-  overflow: auto;
-  text-align: center;
-}
+// article {
+//   height: 30rem;
+//   overflow: auto;
+//   text-align: center;
+// }
 
 .btn-delete {
   margin-left: 1rem;
